Bugfix: Adds gaps to nav items for smaller screens

--- a/styles.scss
+++ b/styles.scss
@@ -631,6 +631,7 @@ body {
     }
     .header__items {
       flex: 3;
+      gap: 12px;
       position: static;
       display: flex;
       align-items: center;
